# cubelit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  UI-Example.jpg:Zone.Identifier  cubelit.key.pub  package.json  vitest.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci-website.yml  ci.yml  deploy-website.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/man/: cubelit.1
crates/cli/src/: context.rs  main.rs  resolve.rs  sink.rs
crates/cli/src/commands/: agent.rs  logs.rs  mod.rs  server.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/.sqlx/: query-201593ab6cef52ac16f4e3c3306a788d7e45ad4d2de134f01b2756bab92fad2b.json  query-202345d25d4271d7e9df75cba0f88bd6d85f7b94261df3c73121b6e2fe12cc13.json  query-a57094dcb2852a510bdb3216319cd7341577b8414fe3c011e2dcd2c8396b60d0.json  query-eefcd77d7c3fa3d776500b0a711f01dd197592500bf4f24936eeaa652fb96d2a.json  query-fd12d09ff85f098315539d0991bc71194b543db3c9b18944fc8fde72a6d9e337.json
crates/core/src/: error.rs  events.rs  lib.rs  ports.rs  recipes.rs
crates/core/src/db/: mod.rs  models.rs  queries.rs
crates/core/src/docker/: containers.rs  health.rs  images.rs  logs.rs  mod.rs  stats.rs
crates/core/src/server/: lifecycle.rs  local.rs  minecraft.rs  mod.rs  runner.rs  types.rs  watchers.rs
crates/core/tests/: db_integration.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-08c047271683d08abd7eabb96382b74a64af38ad870ba6db9976960fc8d239ec.json  query-8f37ee20fe6efc84dfea44014e7f3f95eadc4cc52732f0e55e2f94ac31034f0b.json  query-c716d0f4fb187462a2ea5f9a16892d92e152a09ff2d9ee15177c5bc267d58c9b.json  query-ff54afa9974eb78baef0667aaf6fbf41e7d86ab6e278b50e65743a22ec8a7e30.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/recipes/: ark.json  cs2.json  fivem.json  minecraft-bedrock.json  minecraft-java.json  palworld.json  project-zomboid.json  rust-game.json  terraria.json  valheim.json
src-tauri/src/: error.rs  event_sink.rs  lib.rs  main.rs  ports.rs  recipes.rs  state.rs
src-tauri/src/commands/: docker_commands.rs  file_commands.rs  minecraft_commands.rs  mod.rs  recipe_commands.rs  server_commands.rs  system_commands.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/docker/: containers.rs  health.rs  images.rs  logs.rs  mod.rs  stats.rs
src-tauri/tests/: db_integration.rs
src/lib/api/: docker.test.ts  docker.ts  files.ts  minecraft.ts  recipes.ts  servers.test.ts  servers.ts  system.ts
src/lib/components/: Button.svelte  Card.svelte  CreateProgress.svelte  CubelitCard.svelte  DockerOnboarding.svelte  GameSelector.svelte  GameTile.svelte  Input.svelte  LogViewer.svelte  Modal.svelte  PortInput.svelte  ServerConfigForm.svelte  Spinner.svelte  StatsCards.svelte  StatusRibbon.svelte
src/lib/components/games/: GenericDashboard.svelte
src/lib/components/games/fivem/: FivemCfxKeyStep.svelte  FivemDashboard.svelte  FivemSetup.svelte
src/lib/components/games/minecraft/: MinecraftDashboard.svelte  MinecraftSetup.svelte
src/lib/games/: registry.ts
src/lib/stores/: docker.svelte.ts  recipes.svelte.ts  servers.svelte.ts
src/lib/types/: docker.ts  files.ts  recipe.ts  server.ts
src/lib/utils/: server.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/create/: +page.svelte
src/routes/server/[id]/: +page.svelte
website/: .env.example  CLAUDE.md  index.html  package.json  vite.config.ts
website/deploy/: compose.yml  nginx.conf
website/public/audits/: manifest.json  roadmap-source.html  v0.1.0.html  v0.1.1.html  v0.1.2.html  v0.1.3.html  v0.1.4.html  v0.1.5.html  v0.1.6.html  v0.1.7.html  v0.1.8.html  v0.1.9.html
website/src/: App.svelte  app.css
website/src/lib/: downloads.ts
website/src/lib/components/: Audits.svelte  CubeBackground.svelte  DownloadCTA.svelte  Features.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte  Navbar.svelte  Roadmap.svelte  SupportedGames.svelte  TechStack.svelte
