[package]
name = "cubelit"
version = "0.1.9"
description = "A Tauri App"
authors = ["Cubelit Contributors"]
edition = "2021"
default-run = "cubelit-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cubelit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
cubelit-core = { path = "../crates/core" }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bollard is still used by `commands/system_commands.rs::check_docker` to
# ping the daemon directly without going through `LocalServerHost`.
bollard = "0.18"
# tokio: only `macros` + `rt-multi-thread` are reachable from the desktop
# crate (Tauri spawns its own runtime, our shims only `.await` on
# `state.host.<method>(...)`). The full feature set lives in cubelit-core.
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
# reqwest used by `commands/system_commands.rs::get_public_ip` only.
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Note: chrono / uuid / rand / thiserror / sqlx / futures-util / dirs all
# moved to cubelit-core in the v0.1.8 workspace split. The desktop crate
# pulls them transitively but does not need to declare them.

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell", "Win32_Foundation"] }
