[package]
name = "cubelit-core"
version = "0.1.7"
edition = "2021"
description = "Core business logic for Cubelit (DB, Docker, recipes, server lifecycle)."
authors = ["Cubelit Contributors"]
license = "MIT"

[lib]
name = "cubelit_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tokio = { version = "1.51.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
dirs = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
